align fix

--- a/src/app/hobbies/components/add-new-hobby/add-new-hobby.component.scss
+++ b/src/app/hobbies/components/add-new-hobby/add-new-hobby.component.scss
@@ -1,4 +1,4 @@
-.inner_div {
+.inner_div2 {
     border: 1px solid var(--dark-pink-color);
     border-radius: 5px;
     margin: 10px;
